kubernetes/apps/observability/kubernetes-dashboard/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard
  annotations:
    hajimari.io/appName: 'dashboard'
    external-dns.alpha.kubernetes.io/target: "internal.${SECRET_DOMAIN}"
    kubernetes.io/ingress.class: internal
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: kubernetes-dashboard.png
    gethomepage.dev/name: Kubernetes Dashboard
    gethomepage.dev/group: Observability
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
#    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
#    nginx.ingress.kubernetes.io/ssl-redirect: "true"

    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      auth_request_set $required_groups 'kubernetes_dashboard';
    nginx.ingress.kubernetes.io/whitelist-source-range: |
      10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
spec:
  ingressClassName: internal
  rules:
    - host: &host "dashboard.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard-kong-proxy
                port:
                  number: 443
  tls:
    - hosts:
        - *host
